@@ -23,6 +23,7 @@ Thanks!
 - If a feed item lacks a guid, identify the item by full title and link rather than by a hash.
 - Added Applescript command: "mark all subscriptions read".
 - Single-key shortcut 'n' for Next Unread command.
+- Empty trash automatically on quitting. (Thanks to Hwang Hi.)
 
 2.1.0.2108
 ----------
